--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -11,6 +11,15 @@
       <tr>
         <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
         <td><%= user.name %></td>
+        <td>フォロー数：<%= user.followeds.count %></td>
+        <td>フォロワー数：<%= user.followers.count %></td>
+        <td>
+          <% if user != current_user %>
+            <%= link_to user_relationship_path(user), method: user.followed_by?(current_user) ? :delete : :post do %>
+              <%= "#{user.followed_by?(current_user) ? "フォロー外す" : "フォローする"}" %>
+            <% end %>
+          <% end %>
+        </td>
         <td><%= link_to 'Show', user %></td>
       </tr>
     <% end %>
